apps/test-react/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-react
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - test-react
    secretName: test-react-tls
  rules:
  - host: test-react
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-react
            port:
              number: 8080
